--- a/ForestBot/ForestTests/ForestTests.csproj
+++ b/ForestBot/ForestTests/ForestTests.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ForestBot\ForestBot.csproj" />
     <ProjectReference Include="..\ForestLib\ForestLib.csproj" />
   </ItemGroup>
 
