--- a/ForestBot/ForestBot/ForestBot.csproj
+++ b/ForestBot/ForestBot/ForestBot.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+      <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\ForestLib\ForestLib.csproj" />
   </ItemGroup>
 
